--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "druid_play"
+name = "druid_5e_manager"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-druid = { git = "https://github.com/linebender/druid.git", features = [ "im" ] }
+druid = { git = "https://github.com/linebender/druid.git", features = [ "im", "svg", "image" ] }
 num = "0.4.0"
 serde = { version = "1.0.137", features = [ "derive" ] }
 ron = "0.7.1" # Rusty Object Notation
@@ -17,3 +17,4 @@ strum_macros = "0.24.2"
 lazy_static = "1.4.0"
 uuid = { version = "1.1.2", features = [ "v4", "fast-rng" ]}
 variantly = "0.2.0"
+image = "0.24.3"
