--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-druid = { git = "https://github.com/linebender/druid.git", features = [ "im", "svg", "image" ], rev = "fc05e965c85fced8720c655685e02478e0530e94" }
+druid = { version = "0.8", features = [ "im", "svg", "image" ] }
 num = "0.4.0"
 serde = { version = "1.0.137", features = [ "derive" ] }
 serde_json = "1.0.85"
